--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title: The blog of Pieter Vallen
+title: Pieter Vallen's IT blog (beta)
 email: Pieter@Vallen.net
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+   On this site I write about stuff that interest me. It (will)
+   contain mostly short howto's in the beginning.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://pietervallen.github.io" # the base hostname & protocol for your site
 twitter_username: pietervallen
 github_username:  pietervallen
 
